# NexChat-Microservices

./: .env.docker  DOCKER_SETUP.md  README.md  docker-compose.yml  ecosystem.config.js  how --name-only bbb06ed845c4d1b091b8aff250041731da2b5d94  package-lock.json
client/: next.config.mjs  package-lock.json  package.json
client/src/: middleware.js
client/src/DB/: indexedDb.js  keyProtection.js
client/src/app/: globals.css  layout.js  page.js
client/src/components/: ChatList.js  ChatWindow.js  FindUsersPage.js  GroupList.js  ListMain.js  Setting.js  Sidebar.js  UsernamePage.js
client/src/context/: AppContext.context.js  AuthCheck.Context.js  ThemeContext.js
client/src/data/: dummyUsers.js  mockData.js
client/src/lib/: testPrivateKey.js  utils.js
client/src/styles/: leaflet.css
client/src/utils/: crypto.js  encryption.js  (+4 more)
documentation/: idea.txt
documentation/server/: issues.txt  role.md
server/analytics-service/: go.mod  package-lock.json  package.json
server/auth-service/: Dockerfile  app.js  issues.txt  package-lock.json  package.json  requirements.txt
server/gateway/: go.mod
server/key-service/: Cargo.toml
server/messaging-service/: .dockerignore  Dockerfile  app.js  go.mod  package-lock.json  package.json
server/presence-service/: go.mod  package.json
server/realtime-service/: Dockerfile  app.js  package-lock.json  package.json
server/status-service/: package-lock.json
server/user-service/: app.js  package-lock.json  package.json
server/video-call-service/: package.json
server/worker-service/: package-lock.json  package.json
(+104 files in other folders)
