[package]
name = "key-service"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres"] }
rand = "0.8"
x25519-dalek = "2.0"
sha2 = "0.10"
base64 = "0.22"
redis = "0.25"
dotenv = "0.15"
